add endpoint login user & update swagger
